Fixed overflow on X

--- a/src/styles/AboutMe.css
+++ b/src/styles/AboutMe.css
@@ -236,6 +236,7 @@
     /* DESCRIPTION */
     #about-me {
         padding: 2rem;
+        overflow-x: hidden; 
     }
 
     .about-me-title {
