--- a/src/styles/Feed.css
+++ b/src/styles/Feed.css
@@ -17,3 +17,9 @@
         /* overflow-x: hidden; */
     }
 }
+
+@media only screen and (max-width: 690px) {
+    #feed-wrapper {
+        padding: 0 2rem;
+    }
+}
